--- a/backend-home/HomeMate/appsettings.json
+++ b/backend-home/HomeMate/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MongoDb": "mongodb://localhost:27017/Homemate"
+    "MongoDb": "mongodb://localhost:27017/homemate"
   },
   "Logging": {
     "LogLevel": {
