--- a/backend-home/HomeMate/appsettings.json
+++ b/backend-home/HomeMate/appsettings.json
@@ -2,17 +2,10 @@
   "ConnectionStrings": {
     "MongoDb": "mongodb://localhost:27017/homemate"
   },
-  "Jwt": {
-    "Key": "your-super-secret-jwt-key-that-should-be-at-least-32-characters-long!",
-    "Issuer": "HomeMate",
-    "Audience": "HomeMate-Users",
-    "ExpiryInDays": 7
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.Hosting": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
